testsuite/tests/typecheck/should_fail/T14350.stderr

T14350.hs:59:15: error:
    • Couldn't match expected type ‘Proxy a2
                                    -> Apply (Apply (c x3) 'Proxy) (Apply (g x3) 'Proxy)’
                  with actual type ‘Sing (f x y @@ t0)’
    • The function ‘applySing’ is applied to three arguments,
      but its type ‘Sing (f x y) -> Sing t0 -> Sing (f x y @@ t0)’
      has only two
      In the expression: applySing f Proxy Proxy
      In an equation for ‘dcomp’: dcomp f g x = applySing f Proxy Proxy
    • Relevant bindings include
        x :: Sing x3 (bound at T14350.hs:59:11)
        g :: Sing (g x2) (bound at T14350.hs:59:9)
        f :: Sing (f x1 y) (bound at T14350.hs:59:7)
        dcomp :: Sing (f x1 y)
                 -> Sing (g x2) -> Sing x3 -> (c x3 @@ 'Proxy) @@ (g x3 @@ 'Proxy)
          (bound at T14350.hs:59:1)

T14350.hs:59:27: error:
    • Couldn't match expected type ‘Sing t0’
                  with actual type ‘Proxy a0’
    • In the second argument of ‘applySing’, namely ‘Proxy’
      In the expression: applySing f Proxy Proxy
      In an equation for ‘dcomp’: dcomp f g x = applySing f Proxy Proxy
    • Relevant bindings include
        x :: Sing x3 (bound at T14350.hs:59:11)
        g :: Sing (g x2) (bound at T14350.hs:59:9)
        f :: Sing (f x1 y) (bound at T14350.hs:59:7)
        dcomp :: Sing (f x1 y)
                 -> Sing (g x2) -> Sing x3 -> (c x3 @@ 'Proxy) @@ (g x3 @@ 'Proxy)
          (bound at T14350.hs:59:1)
